tests/run/error_no_method.out
tests/run/error_no_method.ig:3:47: error: no such method on this struct
